--- a/config.ini
+++ b/config.ini
@@ -1,19 +1,16 @@
-#Base Coordinate
-766,540
-765,646
-771,743
-776,856
-774,950
-777,1053
-777,1162
-927,957
-1073,948
-1230,948
-1382,956
-1537,955
-1890,1065
-2095,1062
-2114,1200
-491,724
-2068,1176
-657,934
+#Gag levels are inclusive, eg. min and max levels will be used.
+MIN_GAG_LEVEL: 1
+MAX_GAG_LEVEL: 6
+#Keep separated by pipelines. Format like TU|TR|LU|SO|TH|SQ|DR
+ALLOWED_TRACKS: TU|TR|LU|SO|TH|DR
+#Blacklisted gags. Provide coordinate pairs separated by commas and spaces, eg.
+# 1,1 5,2 3,7
+#This effectively blacklists feather, fruit pie slice, and presentation.
+BLACKLISTED_GAGS:
+#Likelihood to fire instead of use a gag. Decimal between 0 and 100.
+FIRE: 0
+#Likelihood to SOS instead of use a gag. Decimal between 0 and 100.
+FIRE: 0
+#Likelihood to pass instead of use a gag. Decimal between 0 and 100.
+#Set to -1 if you want it to have probability treated like an ordinary gag.
+PASS: -1
