Working Single Gag Picker Cleanup

--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,12 @@
 #Gag levels are inclusive, eg. min and max levels will be used.
 MIN_GAG_LEVEL: 1
-MAX_GAG_LEVEL: 6
+MAX_GAG_LEVEL: 7
 #Keep separated by pipelines. Format like TU|TR|LU|SO|TH|SQ|DR
-ALLOWED_TRACKS: TU|TR|LU|SO|TH|DR
+ALLOWED_TRACKS: TU|TR|LU|SO|TH|
 #Blacklisted gags. Provide coordinate pairs separated by commas and spaces, eg.
 # 1,1 5,2 3,7
 #This effectively blacklists feather, fruit pie slice, and presentation.
-BLACKLISTED_GAGS:
+BLACKLISTED_GAGS: 4,6 4,7 5,6 5,7 1,5
 #Likelihood to fire instead of use a gag. Decimal between 0 and 100.
 FIRE: 0
 #Likelihood to SOS instead of use a gag. Decimal between 0 and 100.
