--- a/config.ini
+++ b/config.ini
@@ -1,16 +1,15 @@
 #Gag levels are inclusive, eg. min and max levels will be used.
-MIN_GAG_LEVEL: 1
-MAX_GAG_LEVEL: 6
-#Keep separated by pipelines. Format like TU|TR|LU|SO|TH|SQ|DR
-ALLOWED_TRACKS: TU|TR|LU|SO|TH|SQ|DR
+MIN_GAG_LEVEL: 3
+MAX_GAG_LEVEL: 7
+#Keep separated by pipelines. Format like TU|TR|LU|SO|TH|SQ|DR|
+ALLOWED_TRACKS: TU|TR|LU|SO|
 #Blacklisted gags. Provide coordinate pairs separated by commas and spaces, eg.
 # 1,1 5,2 3,7
 #This effectively blacklists feather, fruit pie slice, and presentation.
-BLACKLISTED_GAGS:
-#Likelihood to fire instead of use a gag. Decimal between 0 and 100.
+BLACKLISTED_GAGS:           5,6 6,6 7,6 3,2 3,4 3,6 3,7 1,1
+#Likelihood to fire instead of use a gag. Decimal between 1 and 0.
 FIRE: 0
-#Likelihood to SOS instead of use a gag. Decimal between 0 and 100.
-FIRE: 0
-#Likelihood to pass instead of use a gag. Decimal between 0 and 100.
-#Set to -1 if you want it to have probability treated like an ordinary gag.
-PASS: -1
+#Likelihood to SOS instead of use a gag. Decimal between 1 and 0.
+SOS: 0
+#Likelihood to pass instead of use a gag. Decimal between 1 and 0.
+PASS: 0
