Better GUI, Passes, Fires

--- a/config.ini
+++ b/config.ini
@@ -7,9 +7,9 @@ ALLOWED_TRACKS: TU|TR|LU|SO|TH|SQ|DR|
 # 1,1 5,2 3,7
 #This effectively blacklists feather, fruit pie slice, and presentation.
 BLACKLISTED_GAGS:
-#Likelihood to fire instead of use a gag. Decimal between 1 and 0.
-FIRE: 0
-#Likelihood to SOS instead of use a gag. Decimal between 1 and 0.
+#Likelihood to fire instead of use a gag. Number between 0 and 100. -1 to be treated like a gag.
+FIRE: -1
+#Likelihood to SOS instead of use a gag. Number between 0 and 100. -1 to be treated like a gag.
 SOS: 0
-#Likelihood to pass instead of use a gag. Decimal between 1 and 0.
-PASS: 0
+#Likelihood to pass instead of use a gag. Number between 0 and 100. -1 to be treated like a gag.
+PASS: -1
