--- a/config.ini
+++ b/config.ini
@@ -10,6 +10,8 @@ BLACKLISTED_GAGS:
 #Likelihood to fire instead of use a gag. Number between 0 and 100. -1 to be treated like a gag.
 FIRE: -1
 #Likelihood to SOS instead of use a gag. Number between 0 and 100. -1 to be treated like a gag.
-SOS: 0
+SOS: -1
 #Likelihood to pass instead of use a gag. Number between 0 and 100. -1 to be treated like a gag.
 PASS: -1
+#Likelihood to use your doodle instead of an SOS card. Number between 0 and 100. -1 to be treated equally with SOS cards.
+Doodle: 0
