Started Log System

--- a/config.ini
+++ b/config.ini
@@ -1,17 +1,17 @@
 #Gag levels are inclusive, eg. min and max levels will be used.
-MIN_GAG_LEVEL: 1
+MIN_GAG_LEVEL: 3
 MAX_GAG_LEVEL: 6
 #Keep separated by pipelines. Format like TU|TR|LU|SO|TH|SQ|DR|
-ALLOWED_TRACKS: TU|TR|LU|SO|TH|SQ|DR|
+ALLOWED_TRACKS: LU|SO|
 #Blacklisted gags. Provide coordinate pairs separated by commas and spaces, eg.
 # 1,1 5,2 3,7
 #This effectively blacklists feather, fruit pie slice, and presentation.
-BLACKLISTED_GAGS:
+BLACKLISTED_GAGS: 1,1 1,2 1,3 1,4 1,5 1,6 1,7 2,1 2,2 2,3 2,4 2,5 2,6 2,7 3,1 3,2 3,3 3,4 3,5 3,6 3,7 4,1 4,2 4,3 4,4 4,5 4,6 4,7 5,1 5,2 5,3 5,4 5,5 5,6 5,7 6,1 6,2 6,3 6,4 6,5 6,6 6,7 7,1 7,2 7,3 7,4 7,5 7,6 7,7
 #Likelihood to fire instead of use a gag. Number between 0 and 100. -1 to be treated like a gag.
-FIRE: -1
+FIRE: 11
 #Likelihood to SOS instead of use a gag. Number between 0 and 100. -1 to be treated like a gag.
-SOS: -1
+SOS: 6
 #Likelihood to pass instead of use a gag. Number between 0 and 100. -1 to be treated like a gag.
-PASS: -1
+PASS: 6
 #Likelihood to use your doodle instead of an SOS card. Number between 0 and 100. -1 to be treated equally with SOS cards.
-Doodle: 0
+Doodle: 2
