Gag-Sensitive Chat

--- a/config.ini
+++ b/config.ini
@@ -14,4 +14,6 @@ SOS: 0
 #Likelihood to pass instead of use a gag. Number between 0 and 100. -1 to be treated like a gag.
 PASS: 0
 #Likelihood to use your doodle instead of an SOS card. Number between 0 and 100. -1 to be treated equally with SOS cards.
-Doodle: 50
+DOODLE: 100
+#Randomizer can say things in chat when using single-gag or roulette.
+GAG_CHAT: 1
